<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/xp_setting">

        <SwitchPreferenceCompat
                app:key="xp_enable"
                app:title="@string/enable_xposed" />


        <Preference
                android:dependency="xp_enable"
                app:key="xp_module"
                app:summary="@string/jump_module"
                app:title="@string/module_setting" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <Preference
                android:key="gms_manager"
                android:title="@string/gms_manager"/>

        <SwitchPreferenceCompat
                app:key="xp_hide"
                app:title="@string/hide_xposed" />

        <Preference
                android:key="libc_hook_disable"
                android:title="@string/libc_hook_disable"/>

        <Preference
                android:key="maps_hide"
                android:title="@string/maps_hide"/>

        <Preference
                android:key="so_inject"
                android:title="@string/so_inject"/>

        <Preference
                android:key="device_spoof"
                android:title="@string/device_spoof"/>

        <SwitchPreferenceCompat
                app:key="daemon_enable"
                app:title="@string/daemon_enable" />

    </PreferenceCategory>

</PreferenceScreen>